# RomCom

./: .gitignore  README.md  benchmark_script.py  csv_script.py  installation_test.py  pyproject.toml  test.py
doc/: genindex.html  objects.inv  searchindex.js
doc/.doctrees/: environment.pickle  glossary.doctree  index.doctree
doc/.doctrees/pages/: start.doctree
doc/_modules/: index.html
doc/pages/: start.html
doc/pages/package/: rc.base.definitions.Float.html  rc.base.definitions.Int.html  rc.base.definitions.NP.html  rc.base.definitions.Options.html  rc.base.definitions.PD.html  rc.base.definitions.TF.html  rc.base.definitions.ZERO.html  rc.base.definitions.html  rc.base.html  rc.base.models.DataBase.html  rc.base.models.DataTable.html  rc.base.models.Meta.html  rc.base.models.Model.html  rc.base.models.Store.html  rc.base.models.ToyDataBase.html  rc.base.models.ToyModel.html  rc.base.models.html  rc.data.models.Fold.html  rc.data.models.Normalization.html  rc.data.models.Repository.html  rc.data.models.html  rc.gpf.base.Variance.html  rc.gpf.base.html  rc.gpf.html  rc.gpf.kernels.RBF.html  rc.gpf.likelihoods.MOGaussian.html  rc.gpf.models.MOGPR.html  rc.gpf.models.html  rc.gpf.tests.covariance.html  rc.gpf.tests.html  rc.gpf.tests.increment.html  rc.gpf.tests.kernel.html  rc.gpf.tests.likelihood.html  rc.gpf.tests.regression_data.html  rc.gpr.html  rc.gpr.kernels.Kernel.html  rc.gpr.kernels.RBF.html  rc.gpr.kernels.html  rc.gpr.models.GPR.html  rc.gpr.models.Likelihood.html  (+36 more)
docs/: .buildinfo  genindex.html  glossary.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  genindex.doctree  glossary.doctree  index.doctree
docs/.doctrees/pages/: data.doctree  gpr.doctree  gsa.doctree  intro.doctree  rom.doctree  sample.doctree  start.doctree  usage.doctree
docs/_modules/: index.html
docs/_sources/: genindex.rst.txt  index.rst.txt
docs/_sources/pages/: data.rst.txt  gpr.rst.txt  intro.rst.txt  rom.rst.txt  start.rst.txt  usage.rst.txt
docs/_static/: basic.css
docs/pages/: data.html  gpr.html  gsa.html  intro.html  rom.html  sample.html  start.html  usage.html
docs/pages/api/: api.html  rc.base.definitions.Float.html  rc.base.definitions.Int.html  rc.base.definitions.LOGGING_LEVEL.html  rc.base.definitions.NP.html  rc.base.definitions.Options.html  rc.base.definitions.PD.html  rc.base.definitions.TC.html  rc.base.definitions.TF.html  rc.base.definitions.TF_CPP_MIN_LOG_LEVEL.html  rc.base.definitions.ZERO.html  rc.base.definitions.html  rc.base.html  (+87 more)
rc/: __init__.py
rc/base/: __init__.py  definitions.py  models.py
rc/data/: __init__.py  models.py
rc/gpf/: __init__.py  base.py  kernels.py  likelihoods.py  mean_functions.py  models.py  test.py  tests.py
rc/gpr/: __init__.py  base.py  kernels.py  models.py
rc/gsa/: __init__.py  base.py  calibrators.py  models.py
rc/rom/: __init__.py  old.py
rc/user/: __init__.py  contexts.py  functions.py  regressions.py  result.py  run.py  sample.py
romcomma/base/: __init__.py  definitions.py  models.py
romcomma/data/: __init__.py  models.py
romcomma/gpr/: kernels.py  models.py
romcomma/gsa/: base.py  calibrators.py  models.py
romcomma/user/: __init__.py  regressions.py  result.py  run.py  sample.py
(+848 files in other folders)
